<resources>
    <string name="app_name">Basic Application</string>
    <string name="action_settings">Settings</string>
    <string name="count">Increase</string>
    <string name="toast">Toast</string>
    <string name="random">Random</string>
    <string name="textview_number">0</string>
    <string name="decrease">Decrease</string>
    <string name="show_hide">Show/Hide</string>
    <string name="color_random_button">Bg Random</string>
    <string name="reset">Reset</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
